restructured modals and shopify integration

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <html lang="en">
   <body>
     <script type="module" src="/main.js"></script>
+    <button id="mySF_Widget_Button">click me!</button>
   </body>
 </html>
