--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <body>
     <script type="module" src="/main.js"></script>
-    <button id="mySF_Widget_Button">click me!</button>
+    <div style="width: 100%;height: 100vh;display:flex;justify-content: center;align-items: center; flex-direction: column;">    
+      <button style="padding:5px 20px;background-color: #ff7d4f;color:white;border: 0px;border-radius:20px;font-size: 50px;" id="mySF_Widget_Button">TEST</button>    </div>
   </body>
 </html>
